# wf_event_driven

./: LICENSE  README.md  pyproject.toml
docs/: ideas.md
src/: __init__.py  deploy_managed.py
src/flows/: __init__.py  flow_a.py  flow_b.py
